# eventb-to-txt

./: README.md  pyproject.toml  setup.py
.github/workflows/: deploy.yml  test.yml
eventb_to_txt/: __init__.py  __main__.py  abstract.py
